[package]
name = "hora-id"
description = "A 64-bit time-based sorted unique ID generator that includes the current time in the ID"
version = "0.3.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://docs.rs/hora-id/"
repository = "https://github.com/RustyFarmer101/hora-id"
keywords = ["id", "uuid", "ulid", "sortable", "identifier"]
categories = ["data-structures"]

[package.metadata.docs.rs]
features = ["chrono"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
chrono = ["dep:chrono"]

[dependencies]
chrono = { version = "0.4.23", optional = true }
rand = "0.9.2"
